log/build_2023-08-16_05-17-46/agv_gui/stdout_stderr.log
[ 20%] Automatic MOC and UIC for target agv_gui
[ 20%] Built target agv_gui_autogen
Scanning dependencies of target agv_gui
[ 40%] Building CXX object CMakeFiles/agv_gui.dir/src/mtr_node.cpp.o
[ 60%] Building CXX object CMakeFiles/agv_gui.dir/src/main_gui.cpp.o
/home/amr_1/agv_gui/src/agv_gui/src/mtr_node.cpp: In member function ‘void MotorSub::topic_callback(std_msgs::msg::String_<std::allocator<void> >::SharedPtr)’:
/home/amr_1/agv_gui/src/agv_gui/src/mtr_node.cpp:28:24: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const QString&’
   28 |       emit changedTemp(temp);
      |                        ^~~~
      |                        |
      |                        std::string {aka std::__cxx11::basic_string<char>}
/home/amr_1/agv_gui/src/agv_gui/src/mtr_node.cpp:35:35: note:   initializing argument 1 of ‘void MotorSub::changedTemp(const QString&)’
   35 |   void changedTemp(const QString &data);
      |                    ~~~~~~~~~~~~~~~^~~~
In file included from /home/amr_1/agv_gui/src/agv_gui/src/main_gui.cpp:13:
/home/amr_1/agv_gui/src/agv_gui/src/mtr_node.cpp: In member function ‘void MotorSub::topic_callback(std_msgs::msg::String_<std::allocator<void> >::SharedPtr)’:
/home/amr_1/agv_gui/src/agv_gui/src/mtr_node.cpp:28:24: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const QString&’
   28 |       emit changedTemp(temp);
      |                        ^~~~
      |                        |
      |                        std::string {aka std::__cxx11::basic_string<char>}
/home/amr_1/agv_gui/src/agv_gui/src/mtr_node.cpp:35:35: note:   initializing argument 1 of ‘void MotorSub::changedTemp(const QString&)’
   35 |   void changedTemp(const QString &data);
      |                    ~~~~~~~~~~~~~~~^~~~
make[2]: *** [CMakeFiles/agv_gui.dir/build.make:76: CMakeFiles/agv_gui.dir/src/mtr_node.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/agv_gui.dir/build.make:89: CMakeFiles/agv_gui.dir/src/main_gui.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:79: CMakeFiles/agv_gui.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
